refact: preventing overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    overflow: hidden;
+}
+
+.scroll {
+    overflow: auto;
+}
+
+* {
+    box-sizing: border-box;
+}
